2006-08-26  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (bin_at): Rewrite to be more clear and to not
	waste bins[0..1].
	(malloc_state): Reduce bins size by 2.
	(_int_malloc): Fix test for large enough buffer for early termination.
	When no unsorted block matches perfectly and an exiting block has
	to be split, use full list insert and not shortcut which assumes
	the list is empty.

	* locale/programs/ld-ctype.c (ctype_read): Better patch for read
	failure.

2006-08-24  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-ctype.c (ctype_read): If CTYPE is NULL, don't
	do anything.

	* sysdeps/generic/ldsodefs.h (DL_ADDR_SYM_MATCH): For undefined
	symbol require exact match (these are PLTs).
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/ldsodefs.h
	(_dl_ppc64_addr_sym_match): Likewise.

	[BZ #2683]
	* elf/dl-addr.c (_dl_addr): Don't ignore all undefined symbols.
	If symbol has a value use it.
	* elf/tst-dladdr1.c: New file.
	* elf/Makefile: Add rules to build and run tst-addr1.

2006-08-24  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c (sYSMALLOc): Avoid infinite loop if MMAP
	keeps failing and heap growth or new heap creation isn't
	successful either.
	* malloc/tst-malloc.c (main): Add new tests.

2006-08-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2734]
	* sysdeps/i386/bits/byteswap.h (__bswap_32): Use same conditions
	as in the x86-64 code to use bswap.

2006-05-21  Joseph S. Myers  <joseph@codesourcery.com>

	[BZ #2680]
	* posix/unistd.h (getlogin_r): Condition on __USE_POSIX199506, not
	__USE_UNIX98.
	* posix/bits/unistd.h: Likewise.

2006-05-15  Mike Frysinger  <vapier@gentoo.org>

	[BZ #2751]
	* string/strchr.c: Add cast to avoid warning.

2006-08-21  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c (DEFAULT_MMAP_THRESHOLD_MAX): For 32-bit
	platforms define as 512K.  For 64-bit platforms as 32MB.  The lower
	limit is needed to avoid the exploding of the address space
	requirement for secondary heaps.